# yuki-mac-use

./: .gitignore  LICENSE  README.md  pyproject.toml  release.sh
.github/workflows/: ci.yml  release.yml
app/: Package.swift
app/Yuki/: Backend.swift  BackendController.swift  BurstBridge.swift  ChatOverlay.swift  CommandBar.swift  FirstRun.swift  HUD.swift  HotKey.swift  Info.plist  Keychain.swift  LaunchAgent.swift  LaunchAgentManager.swift  MenuBar.swift  Settings.swift  StatusIcon.swift  Token.swift  UDSClient.swift  Wakeword.swift  YukiApp.swift
docs/: DISTRIBUTION.md
docs/superpowers/plans/: 2026-05-22-A-vendor-agent-core.md  2026-05-22-A0-project-bootstrap.md  2026-05-22-B-memory-vault.md  2026-05-22-C-onboarding-scanner.md  2026-05-22-D-observer-daemon.md  2026-05-22-E-episodist.md  2026-05-22-F-trigger-engine.md  2026-05-22-G-native-tools.md  2026-05-22-H-safety-confirmation.md  2026-05-22-I-backend-server.md  2026-05-22-J-menubar-app.md  2026-05-22-K-packaging.md  2026-05-22-L-claude-code-runtime.md  2026-05-28-M-self-improvement-feedback.md  2026-05-31-N-context-compaction.md  2026-05-31-O-production-mac-app.md  2026-06-01-P-ux-and-personalization.md  2026-06-02-Q-small-model-agent-optimization.md
docs/superpowers/specs/: 2026-05-22-yuki-macos-design.md  2026-05-31-O-production-mac-app.md  2026-06-01-P-ux-and-personalization.md  (+2 more)
packaging/: briefcase.toml  make_dmg.sh  notarize.sh
packaging/homebrew/: yuki.rb
packaging/icon/: Yuki.icns
packaging/launchd/: com.yuki.feedback.learner.plist
packaging/sparkle/: appcast.xml.j2  sign.sh
scripts/: demo_autonomy.py  demo_full_run.py  live_run.py
tests/: conftest.py  test_smoke.py
tests/agent/: test_agent_loop_with_stub.py  test_ax_pruning.py  test_cancellation.py  test_click_by_id.py  test_cost_tracker.py  test_imports.py  test_loop_guard_hard_stop.py  test_loop_guard_stagnation.py  test_loop_termination.py  test_thought_forgiveness.py  test_tool_context.py  test_toolrag.py  test_toolrag_integration.py  test_type_grounding.py
tests/ax/: test_windows_no_recursion.py
tests/backend/: conftest.py  test_appstate.py  test_appstate_toggles.py  test_auth.py  test_caching.py  test_chat_capture.py  test_chat_cli.py  test_cli.py  test_control_smallmodel_wiring.py  test_event_bridge.py  test_provider_recommendations.py  test_queue.py  test_route.py  test_router_chat.py  test_router_facts.py  test_router_health.py  test_router_memory.py  test_router_safety.py  test_router_scan.py  test_router_settings.py  test_router_tools.py  test_router_triggers.py  test_trajectory.py  test_uds_mode.py
tests/episodist/: conftest.py  test_builder.py  test_compactor.py  test_diff.py  test_labeler.py  test_reader.py  test_sessions.py
tests/eval/: test_cases.py  test_run_with_stub.py  test_score.py
tests/feedback/: test_learner_autocreate.py  test_profiler.py
tests/memory/: test_embeddings.py  test_fact_store.py  test_frontmatter.py  test_git.py  test_hot_context.py  test_indexer.py  test_ollama_embedder.py  test_paths.py  test_retriever.py  test_schemas.py  test_task_context.py  test_vault.py
tests/migrations/: test_migrations.py
tests/observer/: conftest.py  test_daemon.py  test_events.py  test_persistence.py  test_ringbuffer.py
tests/providers/: test_factory.py  test_factory_appstate.py  test_ollama_yuki_dialect.py
tests/runtime/: conftest.py  test_compaction.py  test_guards.py  test_stop_hooks.py
tests/safety/: conftest.py  test_allow_rules.py  test_audit.py  test_burst.py  test_confirmer.py  test_decision.py  test_gatekeeper.py  test_trusted.py
tests/scan/: conftest.py  test_collector_apps.py  test_collector_browser.py  test_collector_calendar.py  test_collector_contacts.py  test_collector_files.py  test_collector_git.py  test_collector_mail.py  test_collector_screen_time.py  test_collector_shell.py  test_collector_system.py  test_collectors_base.py  test_entities.py  test_facts.py  test_normalizer.py  test_notewriter.py  test_paths.py  test_patterns.py  test_polish.py  test_runner.py
tests/tools/: test_loader.py  test_spillover.py
tests/training/: test_augment.py  test_schema.py  test_seeds.py  test_to_mlx.py
tests/triggers/: conftest.py  test_audit.py  test_debounce.py  test_engine.py  test_loader.py  test_presenter.py  test_pruner.py  test_ticker.py  test_trigger.py
training/: .gitignore  Modelfile  Modelfile.qwen  README.md  __init__.py  augment.py  eval_mlx.py  export_eval.py  schema.py  seeds.py  to_mlx.py  train_lora.py  trajectories.py
yuki/: __init__.py  _smoke.py
yuki/agent/: __init__.py  base.py  context_scratch.py  cost.py  interaction.py  loop.py  service.py  settle.py  toolrag.py  usersense.py  views.py
yuki/ax/: __init__.py  controls.py  core.py  enums.py  events.py  patterns.py
yuki/backend/: __init__.py  appstate.py  auth.py  caching.py  chat_cli.py  cli.py  event_bridge.py  queue.py  runtime.py  server.py  trajectory.py
yuki/episodist/: __init__.py  builder.py  compactor.py  diff.py  labeler.py  reader.py  sessions.py
yuki/eval/: __init__.py  cases.py  run.py  score.py
yuki/feedback/: __init__.py  cli.py  injector.py  learner.py  profiler.py  recorder.py
yuki/memory/: __init__.py  embeddings.py  fact_store.py  frontmatter.py  git.py  hot_context.py  indexer.py  paths.py  retriever.py  schemas.py  task_context.py  vault.py
yuki/messages/: __init__.py  service.py
yuki/migrations/: __init__.py  v1.py
yuki/observer/: __init__.py  daemon.py  events.py  persistence.py  ringbuffer.py
yuki/providers/: __init__.py  base.py  events.py  factory.py  views.py
yuki/runtime/: __init__.py  compaction.py  guards.py  stop_hooks.py  tokens.py
yuki/safety/: __init__.py  allow_rules.py  audit.py  burst.py  confirmer.py  decision.py  gatekeeper.py  trusted.py
yuki/scan/: __init__.py  entities.py  facts.py  normalizer.py  notewriter.py  paths.py  patterns.py  polish.py  runner.py
yuki/tools/: __init__.py  loader.py  service.py  spillover.py
yuki/triggers/: __init__.py  audit.py  debounce.py  engine.py  loader.py  presenter.py  pruner.py  ticker.py  trigger.py
(+197 files in other folders)
