[project]
name = "yuki"
version = "0.0.1"
description = "A macOS-native personal AI assistant that learns who you are"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [
    { name = "Sudhanshu Pandit" },
]
keywords = [
    "macos",
    "ai-agent",
    "personal-assistant",
    "computer-use",
    "memory",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: MacOS X",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "anthropic>=0.68.1",
    "openai>=1.93.0",
    "google-genai>=1.45.0",
    "google-generativeai>=0.4.0",
    "groq>=0.29.0",
    "ollama>=0.5.1",
    "cerebras-cloud-sdk>=1.50.1",
    "litellm>=1.72.0",
    "mistralai>=1.9.11,<2",  # 2.x has incompatible API (no top-level Mistral export)
    "pyautogui>=0.9.54",
    "pyobjc-core>=12.1",
    "pyobjc>=12.1",
    "pyobjc-framework-Quartz>=10.1",
    "pyobjc-framework-Cocoa>=10.1",
    "pyobjc-framework-ApplicationServices>=10.1",
    "pillow>=10.2.0",
    "requests>=2.31.0",
    "markdownify>=0.11.6",
    "rich>=13.7.0",
    "tabulate>=0.9.0",
    "python-dotenv>=1.2.1",
    "uuid7>=0.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.7.0",
    "mypy>=1.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["yuki"]

# ---------------------------------------------------------------------------
# pytest

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
asyncio_mode = "auto"
filterwarnings = [
    "error",
]

# ---------------------------------------------------------------------------
# ruff

[tool.ruff]
target-version = "py312"
line-length = 100
# The vendored agent core (yuki/{agent,ax,messages,providers,tools}) is not
# linted to MacOS-Use's standards. We only lint code we own end-to-end.
# yuki.providers.stub IS ours and stays linted.
extend-exclude = [
    "build",
    "dist",
    "yuki/agent/**",
    "yuki/ax/**",
    "yuki/messages/**",
    "yuki/providers/anthropic/**",
    "yuki/providers/azure_openai/**",
    "yuki/providers/cerebras/**",
    "yuki/providers/deepgram/**",
    "yuki/providers/deepseek/**",
    "yuki/providers/elevenlabs/**",
    "yuki/providers/google/**",
    "yuki/providers/groq/**",
    "yuki/providers/litellm/**",
    "yuki/providers/mistral/**",
    "yuki/providers/nvidia/**",
    "yuki/providers/ollama/**",
    "yuki/providers/open_router/**",
    "yuki/providers/openai/**",
    "yuki/providers/vllm/**",
    "yuki/providers/base.py",
    "yuki/providers/events.py",
    "yuki/providers/views.py",
    "yuki/providers/__init__.py",
    "yuki/tools/**",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "N",    # pep8-naming
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# mypy

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_unreachable = true
show_error_codes = true
files = ["yuki", "tests"]

# The vendored agent core (forked from MacOS-Use) is not strict-typed.
# We accept that for v1; later plans tighten subsystems we own end-to-end
# (yuki.memory, yuki.scan, yuki.observer, yuki.triggers, yuki.tools.native,
# yuki.safety, yuki.backend) under their own strict checks.
[[tool.mypy.overrides]]
module = [
    "yuki.agent.*",
    "yuki.ax.*",
    "yuki.messages.*",
    "yuki.providers.*",
    "yuki.tools.*",
]
ignore_errors = true
